--- a/Test.tex
+++ b/Test.tex
@@ -33,4 +33,6 @@ Dies ist ein minimales Dokument um die Travis Biber Funktionalität zu testen \p
 	\includegraphics{./Test.png}
 \end{figure}
 
+Dies ist eine weitere Zeile in dieser Testdatei.
+
 \end{document}          
